# dev-scaffold

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
backend/: .coverage  .env.example  Dockerfile  pyproject.toml
backend/src/app/: .manage.py.un~  db.sqlite3  manage.py
backend/src/app/app/: .asgi.py.un~  .urls.py.un~  .wsgi.py.un~
backend/src/app/project/: asgi.py  urls.py  wsgi.py
backend/src/app/project/settings/: .base.py.un~  .dev.py.un~  .prod.py.un~  base.py  dev.py  prod.py
backend/src/app/project/static/: smoketest.txt
backend/tests/: test_health.py  test_placeholder.py
deploy/: docker-compose.dev.yml  docker-compose.prod.yml  setup-env.sh
deploy/nginx/: Dockerfile  default.conf  default.prod.conf
frontend/: .env.example  .prettierrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: App.test.tsx
